<resources>
    <string name="app_name">E - Cell</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in">Sign In</string>
    <string name="facebook">Facebook</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="otp">OTP</string>
    <string name="sign_in_with_username">Sign in with Username</string>
    <string name="sign_in_password">and Password</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="sign_up_one">Sign Up with Username</string>
    <string name="sign_up_two">and Password</string>
    <string name="forgot_password">Forgot your Password</string>

    <string name="facebook_app_id">1942342869359654</string>
    <string name="fb_login_protocol_scheme">fb1942342869359654</string>
    <string name="register_esummit">Register for E-Summit</string>
    <string name="proceed">Proceed</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="required_fields">Some of the required fields are empty.</string>
    <string name="error_last_name">Last Name should not contain digits or empty field.</string>
    <string name="error_email">Invalid Email Address.</string>
    <string name="error_first_name">First Name should not contain digits or empty field.</string>
    <string name="error_common">Empty fields not allowed.</string>
    <string name="error_pass">Password\'s length should at least be six.</string>
    <string name="error_mobile">Enter a valid mobile number.</string>
    <string name="error_con_pass">Passwords didn\'t match.</string>
    <string name="error_fb">Facebook SignUp Cancelled.</string>
    <string name="sample_hello_user">Hey User</string>
    <string name="bquiz_dialog_title">BQuiz</string>
    <string name="bquiz_dialog_msg">Bquiz is not active now. Please try again later</string>
    <string name="bquiz_dialog_retry_btn">Retry</string>
    <string name="bquiz_dialog_cancel_btn">Cancel</string>
    <string name="bquiz_rules_title">Bquiz Rules</string>
    <string name="bquiz_rules_detail">1. All the questions are single correct type i.e. each question has only one correct option.\n2. As soon as the quiz rolls in, the timer begins.\n3. Players need to submit the answers in the allotted time, else the selected option will be submitted automatically.\n4. Going away from B-Quiz screen, while timer is running, will get you a <b>penalty of 5 seconds</b>.\n5. In case, there is any image in the question, tap on the image to magnify it.\n6. Once you submit your answer or quit BQuiz, the question can’t be attended again.\n\nAll the best. Beat the rest with your smartness.\nCheers! </string>
    <string name="bquiz_rules_ok_btn">Play Now!</string>
    <string name="bquiz_timeout_title">Time Out !!</string>
    <string name="bquiz_back_press">Quit</string>
    <string name="bquiz_quit_text">Are you sure, you want to quit?</string>
    <string name="bquiz_timeout_text">Pick your pace. Better luck next time.</string>
    <string name="bquiz_penalty_text">You have been penalised for 5 seconds for changing your screen while playing.</string>
    <string name="bquiz_quit">Quit</string>
    <string name="something_went_wrong_msg">Something went wrong. Please try again.</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="def_user_name_leaderboard">Vrihas Pathak</string>
    <string name="def_user_rank_leaderboard">Rank</string>
    <string name="rank_hash">\#</string>
    <string name="network_issue_title">Network Issue</string>
    <string name="network_issue_details">No internet connection. Please try again.</string>
    <string name="no_internet_connection_msg">No Internet Connection. Please check your internet connection</string>
    <string name="update_msg">Please Update the app for Better experience</string>
    <string name="app_update">App Update</string>
    <string name="update_btn">Update</string>

    <string name="tab1">Aim</string>
    <string name="tab2">Team</string>
    <string name="tab3">Contact Us</string>
    <string name="vision">VISION</string>
    <string name="aim">AIM</string>
    <string name="manager">Manager</string>
    <string name="hc">Head Coordinator</string>
    <string name="faculty">Faculty Incharge</string>
    <string name="head_of_career_dev">Head of Career Development</string>
    <string name="dir">Director</string>
    <string name="exec">Executive</string>
    <string name="get_in_touch">GET IN TOUCH</string>
    <string name="msg">Message</string>
    <string name="name">Name</string>
    <string name="address">National Institute of Technology, GE Road, Raipur (492001)</string>
    <string name="committe_email">ecell@nitrr.ac.in</string>
    <string name="contact_no">08827544244</string>
    <string name="team">Team</string>
    <string name="es">E - Summit \'18</string>
    <string name="our_sponsors">OUR SPONSORS</string>
    <string name="our_speakers">OUR SPEAKERS</string>
    <string name="feedback_success">Thank you for giving us feedback!</string>
    <string name="feedback_failure">Please fill the above details to send feedback!</string>
    <string name="feedback_json_failure">There was an error sending message,try again or please contact E-Cell team.</string>
    <string name="aim_content">At E-Summit \'18 we aspire to create a melange of eminent speakers who have proved themselves in diverse fields and are at zenith of glory. E-Summit \'18 will not just be a conclave of innovative minds and epistemic elocutionists, but it will be the place</string>
    <string name="aim_content_end">where ideas not only thrive but become the greatest revelations in century.</string>
    <string name="vision_content">The Entrepreneurship Cell, NIT Raipur is a FORUM for the aspiring young minds who wish to pursue entrepreneurship and reach the pinnacle of glory. The cell aims at manifesting the essence of entrepreneurship in the convoluting gray</string>
    <string name="vision_content_end"> matters of the young force coming up. This delegation gives wings to ideas and support in form of investors and seed funding along with mentorship guidance to the pioneering and budding entrepreneurs. The cell aims at promoting the start up culture and building up entrepreneurs who have it in them to become the greatest pioneers of this century.</string>
    <string name="sponsor_website">Visit Sponsor Website</string>
    <string name="about_esummit">The Entrepreneurship Summit is an event to provide platform where the students, faculty, investors, participants, speakers and start-ups can interact with each other and gain traction to improve them. We believe in a growth where everyone grows together and hence is this summit. The bright minds shall gain the motivation, resources and the pathway to realise their potential and convert their ideas to innovative start-ups.</string>
    <string name="spinner_text">Title</string>
    <string name="log_out">Log Out</string>
    <string name="date">September 8 and 9, 2018 NIT Raipur</string>
    <string name="send">SEND</string>

    //Notification
    <string name="default_notification_channel_id">Random number</string>

</resources>
