<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="nitrr.ecell.e_cell.signin.activities.login_activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/bg_with_circle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="left"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ecell_white" />

        <TextView
            android:id="@+id/sign_in_txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/sign_in"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorWhite"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_in_txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/sign_in_with_username"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_in_txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/sign_in_password"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/layout_background"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                style="@style/textInputLayoutStyle"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/inputusername"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/email"
                    android:paddingBottom="25dp"
                    android:paddingTop="0dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                style="@style/textInputLayoutStyle"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_gravity="center">


                <EditText
                    android:id="@+id/inputpassword"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="25dp"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_style_filled"
            android:orientation="vertical">

            <Button
                android:id="@+id/signinbutton"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorOuterSpace"
                android:textSize="20dp" />


        </LinearLayout>

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="forgot_password"
            android:paddingLeft="50dp"
            android:paddingTop="2dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorSonicSilver"
            android:textSize="16dp" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/signinprogressbar"
        style="@style/AlertDialog.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="49dp"
        android:visibility="gone" />


</RelativeLayout>

