<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayoutESummit"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorHomeBottomBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar_esummit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/esummit_toolbar"
                    style="@style/HeaderBar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp">

                </android.support.v7.widget.Toolbar>


            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:scrollbars="horizontal"
                android:layout_marginTop="4dp"
                android:layout_below="@+id/app_bar_esummit">

                <ImageView
                    android:id="@+id/es_image"
                    android:layout_width="230dp"
                    android:layout_height="230dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/es_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/es"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp" />

                <nitrr.ecell.e_cell.utils.TypeWriter
                    android:id="@+id/typewriterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/es_content"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/raleway_medium"
                    android:lines="12"
                    android:maxLines="12"
                    android:text="@string/about_esummit"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/es_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/our_speakers"
                    android:textAlignment="center"
                    android:textColor="@color/colorGreenLight"
                    android:textSize="60sp" />

                <ProgressBar
                    android:id="@+id/progressSpeaker"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/esRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />
            </LinearLayout>

            <!--<ImageView-->
                <!--android:layout_width="32dp"-->
                <!--android:layout_height="32dp"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_marginStart="8dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:src="@drawable/ic_cancel"/>-->
        </RelativeLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>